# Qt-Instant-Messaging-System

./: README.md
ChatClient/: CMakeLists.txt  addfrienddialog.cpp  addfrienddialog.h  choosefrienddialog.cpp  choosefrienddialog.h  debug.h  groupsessiondetailwidget.cpp  groupsessiondetailwidget.h  historymessagewidget.cpp  historymessagewidget.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  messageeditarea.cpp  messageeditarea.h  messageshowarea.cpp  messageshowarea.h  phoneloginwidget.cpp  phoneloginwidget.h  resource.qrc  selfinfowidget.cpp  selfinfowidget.h  sessiondetailwidget.cpp  sessiondetailwidget.h  sessionfriendarea.cpp  sessionfriendarea.h  soundrecorder.cpp  soundrecorder.h  toast.cpp  toast.h  userinfowidget.cpp  userinfowidget.h  verifycodewidget.cpp  verifycodewidget.h
ChatClient/model/: data.h  datacenter.cpp  datacenter.h
ChatClient/network/: NetClient.cpp  NetClient.h
ChatClient/proto/: base.proto  file.proto  friend.proto  gateway.proto  message_storage.proto  message_transmit.proto  notify.proto  speech_recognition.proto  user.proto
ChatServerMock/: CMakeLists.txt  CMakeLists.txt.user.53c8e89  main.cpp  resource.qrc  server.cpp  server.h  widget.cpp  widget.h  widget.ui
ChatServerMock/resource/file/: speech.pcm  test.txt
